# finance-back

./: .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml  finance.db  schema.sql
.sqlx/: query-02b83fa89ccc3bdc6a44760411ddd1c72906eebcb8be726f173b278fcb70097e.json  query-03c4cb2d808ec89fe2ed36af4c8459568b8433e38a186817e3cd05e3beab7719.json  query-03fad67fdfd8ce45cf61856c9d472b66256c9c907bb0ba373916e72f49434359.json  query-07626f8280ef56acba5a50612363cd93bec843ad37357160917792b9720c8f71.json  query-0be87f7c974bd346dbfb4ef4d1743a87c4971cd6621eab13af946e6a58882de1.json  query-125522e624cde257ea5c975ecc7c1f7362ccd66b7cdb010882b974c5265a5655.json  query-1305aa74ec5f9bae98057b67b7a5f8532be31a542d9539e5cbc60c48d281a2a1.json  query-17e30a251e99c33f2ef6dacb7f50aac6a50aa00e43a06dc55c29fe7ff149493f.json  query-1ddaec8a9fc1362ee1bfe579da1bfbaaf9a5c276c9d705ff5b2a996a7d994f74.json  (+47 more)
api/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
api/.sqlx/: query-36e13690e50a311897143f9b1f8bcd9edcd93f65d74b4e13d4d08b53e7de3806.json  query-4964b7d4ae27199080c7d8da7cf404c1dc5b17dfd8ffae0e222ad3669ea8b166.json  query-4e7d74f832617d5b59ff2292c0b1eae85c0486a8424a4d733f2e1b894b5e6232.json  query-504119d2a9d5a036f407b3e9b50188c86515edfb5b788ac60f795805bcb6a350.json  query-5fdc8b5795ab19d758299e675e90ab2b746e876eee63336f4266dc29a4a154d4.json  query-7b4408a5e4e40a0d093db8fec92026b8b963382f9a1ab1b0dc282e67b1a3ccd4.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-a28dd7a7a42c52eb1f4c26d30b1481e6b0ccd52cce250e92cbdfe359a1e330b9.json  query-b04a31fb63ab7921896cf693fe6b8f9b01495b72446742a50c453d10cc14195d.json  query-c69eb295bc41b67b3a97b4e2a3405dcff56dd45cc57e287d55d9caf7c6233907.json  query-ceb2e173a8328370c8e616c58689972088a7c8a2520d646703baf6ae4150bfa9.json  query-d0b1f4d56f4d852dcd7f41bbdffddd3614f36a5e3510cdf369a707230d41a307.json  query-e26f1a846ff3ddfc7917df1fa43662580215f224193e749558f35309e5517a4e.json  query-f0f2b896c1826347af0333693613a8decd4ff5cc00d7570d98bbd4be96ec3f9c.json  query-fd2a849c275de4b801c622071d3e7cc1c4f5eaf194edfde73eabbfe9f3e2aecd.json
api/libsqlite3_unaccent/: Cargo.toml
api/libsqlite3_unaccent/src/: lib.rs
api/migrations/: 20260519162813_rename_id_user_to_user_id.down.sql  20260519162813_rename_id_user_to_user_id.up.sql  20260519165542_cleanup_orphan_coin_image_refs.down.sql
api/proptest-regressions/domain/: asset_purity.txt
api/scripts/: deploy.sh  deploy_if_changed.sh  lock.sh
api/sqlite3_unaccent/: Cargo.toml
api/src/: configuration.rs  database.rs  error.rs  lib.rs  main.rs  route.rs  router.rs  routes.rs  startup.rs  state.rs  telemetry.rs  trade_values.rs  util.rs
api/src/database/: api_keys.rs  cash_assets.rs  coin_assets.rs  coins.rs  mod.rs  prelude.rs  prices.rs  raw_assets.rs  trade_values.rs  users.rs
api/src/database/tables/: cash_asset.rs  coin.rs  coin_asset.rs  coin_image.rs  mod.rs  price.rs  raw_asset.rs  users.rs
api/src/domain/: asset_composition.rs  asset_name.rs  asset_possessed.rs  asset_price.rs  asset_purity.rs  asset_trade_value.rs  asset_unit_value.rs  asset_unit_weight.rs  authenticated_user_id.rs  coin_search_query.rs  create_cash_asset.rs  create_coin_asset.rs  create_raw_asset.rs  mod.rs  new_cash_asset.rs  update_cash_asset.rs  update_raw_asset.rs
api/src/middleware/: auth.rs  check_api_key.rs  mod.rs
api/src/model/: cash_asset.rs  coin.rs  coin_asset.rs  coin_image.rs  mod.rs  price.rs  raw_asset.rs
api/src/route/: assets.rs  cash_assets.rs  coin_assets.rs  coins.rs  raw_assets.rs  trade_values.rs
api/src/routes/: assets.rs  cash_assets.rs  coin_assets.rs  coins.rs  health_check.rs  mod.rs  raw_assets.rs  trade_values.rs
api/src/routes/cash_assets/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api/src/routes/coin_assets/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api/src/routes/coins/: get.rs  mod.rs  search.rs
api/src/routes/prices/: get_all.rs  get_one.rs  mod.rs
api/src/routes/raw_assets/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api/src/util/: api_error.rs  convert_coin_model_to_coin_response.rs  dto.rs  get_user_id_from_headers.rs
api/src/util/dto/: assets_dto.rs  coins_dto.rs
api/src/utils/: api_error.rs  convert_coin_model_to_coin_response.rs  error.rs  errors.rs  extract.rs  get_user_id_from_headers.rs  mod.rs
api/src/utils/dto/: assets_dto.rs  coins_dto.rs  mod.rs
api/tests/: health_check.rs
api/tests/api/: assets.rs  auth_middleware.rs  cash_assets.rs  coin_assets.rs  coins.rs  health_check.rs  healthcheck.rs  helpers.rs  main.rs  prices.rs  raw_assets.rs
api/tests/api/cash_assets/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api/tests/api/coin_assets/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api/tests/api/coins/: get.rs  mod.rs  search.rs
api/tests/api/helpers/: fakes.rs  mod.rs  test_app.rs
api/tests/api/prices/: get_all.rs  get_one.rs  mod.rs
api/tests/api/raw_assets/: create.rs  delete.rs  get.rs  mod.rs  update.rs
coin-extractor/: .gitignore  Cargo.toml
coin-extractor/src/: coin_query.rs  domain.rs  lib.rs  main.rs  program_parameters.rs
coin-extractor/tests/coin-extractor/: helpers.rs  main.rs  run.rs
update-agent/: .gitignore  Cargo.toml  Dockerfile
update-agent/.sqlx/: query-87c43f4faccad2e7099a31aef462b993136f2a1ff94501b35de3280d4bbb667e.json
update-agent/scripts/: deploy.sh
update-agent/src/: currencies_values.rs  database.rs  main.rs  precious_metals_values.rs  stocks_values.rs  update_agent.rs
update-agent/src/currencies_values/: currencies_price.rs
update-agent/src/domain/: currency_price.rs  metal_price.rs  mod.rs  stock_price.rs
update-agent/src/precious_metals_values/: metal_price.rs
update-agent/src/stocks_values/: sp500_price.rs
update-agent/src/values/: currencies_values.rs  mod.rs  precious_metals_values.rs  stocks_values.rs
update-agent/src/values/currencies_values/: currencies_price.rs  mod.rs
update-agent/src/values/precious_metals_values/: metal_price.rs
update-agent/src/values/stocks_values/: mod.rs  sp500_price.rs
(+15 files in other folders)
