[workspace]
resolver = "3"
members = [
    "api",
    "coin-extractor",
    "update-agent",
]
exclude = [
    "sqlite3_unaccent",
]

[workspace.lints.clippy]
pedantic = {level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant-closure_for_method_calls = "allow"
match_same_arms = "allow"
