[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
tracing = "0.1.41"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tracing-subscriber = { version = "0.3.23", features = ["registry", "chrono"] }
uuid = { version = "1.23.1", features = ["v4"] }
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
json-subscriber = "0.2.8"
unicode-segmentation = "1.13.2"

[dev-dependencies]
claims = "0.8.0"
proptest = "1.11.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
