[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
api-error-derive = { path = "../api-error-derive" }
axum = { version = "0.8.9", features = ["macros"] }
anyhow = "1.0.103"
chrono = "0.4.45"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tracing-subscriber = { version = "0.3.23", features = ["registry", "chrono", "json"] }
uuid = { version = "1.23.4", features = ["v4"] }
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.13.3"
thiserror = "2.0.18"

[dev-dependencies]
claims = "0.8.0"
fake = "5.1.0"
proptest = "1.11.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde_json = "1.0.150"
