[package]
name = "coin-extractor"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
secrecy = "0.10.3"

[dev-dependencies]
approx = "0.5.1"
claims = "0.8.0"
fake = "5.1.0"
sqlx = { version = "0.8.6", features = ["migrate"] }
uuid = { version = "1.23.3", features = ["v4"] }
wiremock = "0.6.5"
