[package]
name = "update-agent"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dotenvy = "0.15.7"
chrono = "0.4.45"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
anyhow = "1.0.103"

[dev-dependencies]
approx = "0.5.1"
claims = "0.8.0"
fake = "5.1.0"
wiremock = "0.6.5"
